## 2019 - 07 - 20
### Major
- Only Admins can now assign judges to teams
    - In earlier releases, judges could automatically assign teams to themselves, and the flow of information being slightly out of sync. This ensures there is one source of truth about aiggned teams
- Removed incoming feed settings for Judges
    - No longer needed as the admins now assign judges to teams

### Minor
- General UI/UX Improvements
    - Cleaning up the team filter flow for admins.
    - Filter states are now persisted across page refreshes
    
### Bug Fixes
